--- a/style.css
+++ b/style.css
@@ -1,18 +1,36 @@
-body{
+body {
     background-color: gray;
-    
+
 }
-body *{
+
+body * {
     color: black;
 }
-.principal{
+
+.principal {
+    padding-top: 5vh;
+    ;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.floatleft {
+    grid-column-start: 6;
+    grid-column-end: 6;
+}
+
+.floatright {
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+.itchdiv {
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: center;
 }
-.floatleft{
-    float: left;
-}
-.floatright {
-    float: right;
+
+.itchdiv>* {
+    margin-top: 1vh;
 }
